--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -6,12 +6,12 @@
   "features": {
     // renovate: depType=devcontainerFeature datasource=docker
     "ghcr.io/devcontainers-contrib/features/copier:7.0.12": {
-      // renovate: depType=devDependencies datasource=github-tags depName=copier-org/copier stripVersionPrefix=true
+      // renovate: depType=devDependencies datasource=github-tags depName=copier-org/copier extractVersion=true
       "version": "9.1.0"
     },
     // renovate: depType=devcontainerFeature datasource=docker
     "ghcr.io/devcontainers-contrib/features/go-task:1.0.4": {
-      // renovate: depType=devDependencies datasource=github-tags depName=go-task/task stripVersionPrefix=true
+      // renovate: depType=devDependencies datasource=github-tags depName=go-task/task extractVersion=true
       "version": "3.33.0"
     },
     // renovate: depType=devcontainerFeature datasource=docker
@@ -26,12 +26,12 @@
     },
     // renovate: depType=devcontainerFeature datasource=docker
     "ghcr.io/devcontainers-contrib/features/pre-commit:2.0.16": {
-      // renovate: depType=devDependencies datasource=github-tags depName=pre-commit/pre-commit stripVersionPrefix=true
+      // renovate: depType=devDependencies datasource=github-tags depName=pre-commit/pre-commit extractVersion=true
       "version": "3.5.0"
     },
     // renovate: depType=devcontainerFeature datasource=docker
     "ghcr.io/devcontainers/features/python:1.3.1": {
-      // renovate: depType=devDependencies datasource=github-tags depName=python/cpython stripVersionPrefix=true
+      // renovate: depType=devDependencies datasource=github-tags depName=python/cpython extractVersion=true
       "version": "3.12.0"
     }
   },
