chore: remove custom Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,33 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"],
-  "customManagers": [
-    {
-      "customType": "regex",
-      "fileMatch": ["devcontainer.json", "devcontainer.json.jinja"],
-      "matchStrings": [
-        "\"image\": \"(?<depName>mcr.microsoft.com/devcontainers/base):(?<currentValue>.*)\""
-      ],
-      "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "fileMatch": ["devcontainer.json", "devcontainer.json.jinja"],
-      "matchStrings": [
-        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s*\"version\":\\s*\"(?<currentValue>.*)\""
-      ],
-      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
-    }
-  ],
-  "packageRules": [
-    {
-      "matchPackageNames": [
-        "copier-org/copier",
-        "go-task/task",
-        "pre-commit/pre-commit",
-        "python/cpython"
-      ],
-      "extractVersion": "^v(?<version>.*)$"
-    }
-  ]
+  "extends": ["config:recommended"]
 }
